/cp 2014-06-06  Paolo Carlini  <paolo.carlini@oracle.com>

PR c++/60184
	* class.c (check_field_decls): In C++11 mode do not reject
	static data members and reference-type members in unions.

/testsuite
2014-06-06  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/60184
	* g++.dg/cpp0x/constexpr-union6.C: New.
	* g++.dg/cpp0x/union6.C: Likewise.
	* g++.dg/init/ref14.C: Adjust.
	* g++.dg/init/union1.C: Likewise.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@211318 138bc75d-0d04-0410-961f-82ee72b054a4