gcc/testsuite/g++.dg/init/ref14.C
@@ -4,7 +4,7 @@
 
 union A
 {
-  int &i; // { dg-error "may not have reference type" }
+  int &i; // { dg-error "may not have reference type" "" { target { ! c++11 } } }
 };
 
 void foo()
